--- a/vite-project/src/componentes/Login.css
+++ b/vite-project/src/componentes/Login.css
@@ -87,6 +87,7 @@ body{
 .login-placeholder {
     width: 365px;
     height: 45px;
+    text-align: center;
     border: none;
     border-radius: 15px;
     font-size: 24px;
