--- a/vite-project/src/componentes/Waiter.css
+++ b/vite-project/src/componentes/Waiter.css
@@ -33,6 +33,7 @@
     z-index: 3;
     justify-content: center;
     align-items: center;
+    text-align: center;
     text-decoration: none;
     margin-top: -100px;
 }
