--- a/vite-project/src/componentes/Products.css
+++ b/vite-project/src/componentes/Products.css
@@ -22,11 +22,16 @@
 .products-elements {
     z-index: 3;
     font-family: 'Manrope', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: wrap;
 }
 
 .menu-icon {
-    width: 15%;
-    float: right;
+    width: 120px;
+    right: 0;
+    position: absolute;
 }
 
 .btn-products {
@@ -55,10 +60,134 @@
 
 .btns-container {
     display: flex;
-    justify-content:center;
+    justify-content: center;
+    margin-top: 15%;
 }
 
 .crear-productos {
     color: #FFF;
     margin-left: 80px;
+}
+
+.bq-logo2 {
+    z-index: 3;
+    width: 150px;
+    top: 0;
+    left: 0;
+    position: absolute;
+}
+
+.form {
+    background-color: #242121;
+    display: flex;
+    width: 85%;
+    flex-wrap: wrap;
+    height: 80px;
+    padding: 20px;
+    gap: 10px;
+    border-radius: 12px;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input-class {
+    width: 31%;
+    text-align: center;
+    border-radius: 12px;
+    font-size: 17px;
+    font-family: 'Manrope', sans-serif;
+}
+
+.btn-create {
+    width: 15%;
+    background-color: #FA7F4B;
+    border: none;
+    border-radius: 12px;
+    font-size: 17px;
+    color: #FFF;
+    font-weight: 400;
+    font-family: 'Manrope', sans-serif;
+}
+
+.btn-clean {
+    width: 15%;
+    background-color: #FFBA7F;
+    border: none;
+    border-radius: 12px;
+    font-size: 17px;
+    color: #FFF;
+    font-weight: 400;
+    font-family: 'Manrope', sans-serif;
+}
+
+.table2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5%;
+    width: 100%;
+}
+
+.table-title {
+    background-color: #242121;
+    color: #FFF;
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    height: 50px;
+    align-items: center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+.table-head {
+    width: 100%;
+    background-color: #FFBA7F;
+    height: 40px;
+}
+
+.table-body {
+    background-color: #FFE181;
+    text-align: center;
+}
+
+table, tr, td {
+    border:none;
+}
+
+.btn-edit {
+    width: 78px;
+    height: 40px;
+    background-color: #FA7F4B;
+    border: none;
+    border-radius: 12px;
+    font-size: 17px;
+    color: #FFF;
+    font-weight: 400;
+    font-family: 'Manrope', sans-serif;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.btn-delete {
+    width: 78px;
+    height: 40px;
+    background-color: #FFBA7F;
+    border: none;
+    border-radius: 12px;
+    font-size: 17px;
+    color: #FFF;
+    font-weight: 400;
+    font-family: 'Manrope', sans-serif;
+    margin-right: 10px;
+}
+
+.productImg2 {
+    display: block;
+    margin: auto;
+    max-width: 100px;
 }
