--- a/vite-project/src/componentes/Desayunos.css
+++ b/vite-project/src/componentes/Desayunos.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
 .desayunos {
     width: 100%;
     height: 1170px;
@@ -16,17 +18,23 @@
 
 .menu-desayunos {
     width: 60%;
-    z-index: 3;
+    z-index: 6;
+    margin-top: -200px;
 }
 
-.ordenes{
-    margin-top: -1150px;
-    width: 25%;
-    height: 100%;
+.ordenes {
     background-color: #242121;
-    opacity: 30%;
+    width: 100%;
+    min-height: 300px;
     z-index: 3;
-    margin-left: 1035px;
+    opacity: 90%;
+    margin-top: 50px;
+    bottom: 0px;
+    position: absolute;
+    font-family: 'Staatliches', cursive;
+    color: #FFF;
+    font-size: 30px;
+    letter-spacing: 1px;
 }
 
 .imagenes{
@@ -35,4 +43,19 @@
     flex-wrap: wrap;
     gap: 14px;
     align-items: center;
+}
+
+.menu-icon-desayunos {
+    width: 120px;
+    right: 0;
+    top: 0;
+    position: absolute;
+    z-index: 4;
+}
+
+.title {
+    color: #FFF;
+    font-size: 30px;
+    font-family: 'Staatliches', cursive;
+    letter-spacing: 1px;
 }
