--- a/vite-project/src/componentes/AdminProducts.css
+++ b/vite-project/src/componentes/AdminProducts.css
@@ -66,6 +66,22 @@
     text-decoration: none;
 }
 
+.btn-users2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 235px;
+    height: 50px;
+    background-color: #FFBA7F;
+    border: none;
+    border-radius: 35px;
+    font-size: 20px;
+    color: #FFF;
+    font-weight: 600;
+    text-decoration: none;
+    z-index: 4;
+}
+
 .btns-container {
     display: flex;
     justify-content: center;
