--- a/vite-project/src/componentes/Desayunos.css
+++ b/vite-project/src/componentes/Desayunos.css
@@ -78,7 +78,7 @@
     width: 80%;
     align-items: center;
     justify-content: center;
-    margin-top: 60px;
+    margin-top: 30px;
 }
 .resumenOrden2 {
     z-index: 3;
@@ -87,11 +87,12 @@
     width: 80%;
     align-items: center;
     justify-content: center;
-    margin-top: -40px;
+    font-size: 22px;
 }
 .containerOrden-sendKitchen{
     display: flex;
     flex-direction: row;
+    margin-bottom: 100px;
 }
 .total{
     z-index: 3;
@@ -126,7 +127,7 @@
 .containerPedidos {
 background-color: #242121;
 width: 100%;
-min-height: 300px;
+height: auto;
 z-index: 3;
 opacity: 90%;
 margin-top: 50px;
@@ -139,6 +140,7 @@ letter-spacing: 1px;
 display: flex;
 flex-direction: column;
 }
+
 .btnMas {
     width: 40px;
     height: 25px;
@@ -186,6 +188,7 @@ flex-direction: column;
 }
 .productSelected{
     margin-right: 20px;
+    min-width: 200px;
 }
 .delete-icon{
     width: 30px;
@@ -194,6 +197,7 @@ flex-direction: column;
 }
 .price{
     margin-right: 20px;
+    width: 50px;;
 }
 .input-class2 {
     width: 31%;
