--- a/vite-project/src/componentes/Desayunos.css
+++ b/vite-project/src/componentes/Desayunos.css
@@ -10,16 +10,15 @@
 }
 
 .background-coffe {
-    position: absolute;
+    position: fixed;
     height: 1200px;
     z-index: 1;
-    /* background-attachment: fixed; */
 }
 
 .menu-desayunos {
     width: 60%;
     z-index: 6;
-    margin-top: -200px;
+    margin-top: -100px;
 }
 
 .ordenes {
@@ -38,14 +37,16 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    left: 0;
 }
 
-.imagenes{
+.imagenes {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 14px;
     align-items: center;
+    justify-content: center;
 }
 
 .menu-icon-desayunos {
@@ -63,14 +64,15 @@
     letter-spacing: 1px;
 }
 
-.containerOrden{
+.containerOrden {
     display: flex;
     flex-direction: column;
     width: 70%;
     height: 60px;
     position: absolute;
-    margin-left: 50px;
+    margin-top: 120px;
 }
+
 .resumenOrden {
     z-index: 3;
     display: flex;
@@ -80,6 +82,7 @@
     justify-content: center;
     margin-top: 30px;
 }
+
 .resumenOrden2 {
     z-index: 3;
     display: flex;
@@ -89,31 +92,34 @@
     justify-content: center;
     font-size: 22px;
 }
-.containerOrden-sendKitchen{
+
+.containerOrden-sendKitchen {
     display: flex;
     flex-direction: row;
     margin-bottom: 100px;
 }
-.total{
+
+.total {
     z-index: 3;
     display: flex;
     flex-direction: row;
-    width: 70%;
+    width: 88%;
     align-items: center;
-    justify-content: space-around;
-    margin-top: -20px;
+    justify-content: flex-end;
 }
-.btnSendKitchen{
+
+.btnSendKitchen {
     width: 30%;
     display: flex;
     z-index: 3;
     align-items: center;
     text-decoration: none;
     margin-left: 100px;
-    margin-top: 130px;
+    margin-top: 50px;
 }
-.btn-kitchen{
-    width: 250px;
+
+.btn-kitchen {
+    width: 200px;
     height: 75px;
     background-color: #FA7F4B;
     border: none;
@@ -125,20 +131,20 @@
 }
 
 .containerPedidos {
-background-color: #242121;
-width: 100%;
-height: auto;
-z-index: 3;
-opacity: 90%;
-margin-top: 50px;
-bottom: 0px;
-position: absolute;
-font-family: 'Staatliches', cursive;
-color: #FFF;
-font-size: 30px;
-letter-spacing: 1px;
-display: flex;
-flex-direction: column;
+    background-color: #242121;
+    width: 100%;
+    height: auto;
+    z-index: 3;
+    opacity: 90%;
+    margin-top: 50px;
+    bottom: 0px;
+    position: absolute;
+    font-family: 'Staatliches', cursive;
+    color: #FFF;
+    font-size: 30px;
+    letter-spacing: 1px;
+    display: flex;
+    flex-direction: column;
 }
 
 .btnMas {
@@ -146,7 +152,7 @@ flex-direction: column;
     height: 25px;
     border: none;
     border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px ;
+    border-bottom-right-radius: 25px;
     background-color: #FA7F4B;
     color: #FFFF;
     font-size: 20px;
@@ -156,9 +162,11 @@ flex-direction: column;
     cursor: pointer;
     margin-right: 30px;
 }
-.btnMas:hover{
+
+.btnMas:hover {
     background-color: #242121;
 }
+
 .btnMenos {
     width: 40px;
     height: 25px;
@@ -173,11 +181,12 @@ flex-direction: column;
     text-align: center;
     cursor: pointer;
 }
-.btnMenos:hover{
+
+.btnMenos:hover {
     background-color: #242121;
 }
 
-.counter{
+.counter {
     display: flex;
     background-color: #FFF;
     width: 60px;
@@ -186,19 +195,26 @@ flex-direction: column;
     text-align: center;
     justify-content: center;
 }
-.productSelected{
+
+.productSelected {
     margin-right: 20px;
+    max-width: 200px;
     min-width: 200px;
+    margin-left: -120px;
 }
-.delete-icon{
+
+.delete-icon {
     width: 30px;
     height: 30px;
     margin-bottom: 5px;
 }
-.price{
+
+.price {
     margin-right: 20px;
-    width: 50px;;
+    width: 50px;
+    ;
 }
+
 .input-class2 {
     width: 31%;
     height: 30px;
@@ -210,6 +226,14 @@ flex-direction: column;
 }
 
 .btns-container {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: -30px;
+    margin-bottom: 30px;
+    font-family: 'Manrope', sans-serif;
+}
+.btns-containerUsers{
     display: flex;
     justify-content: center;
     text-align: center;
@@ -315,4 +339,58 @@ flex-direction: column;
     color: #FFF;
     font-weight: 600;
     text-decoration: none;
+}
+
+@media screen and (min-width:1180px) {
+    .desayunos {
+        flex-direction: row;
+        height: auto;
+    }
+
+    .menu-desayunos {
+        width: 40%;
+        height: 66%;
+        margin-top: 135px;
+    }
+
+    .imagenes {
+        width: 100%;
+    }
+
+    .ordenes {
+        width: 35%;
+        min-height: 820px;
+        left: auto;
+        right: 0;
+    }
+
+    .containerOrdenes {
+        width: 30%;
+    }
+
+    .ordenTitle {
+        margin-top: 150px;
+    }
+
+    .containerOrden {
+        width: 100%;
+        margin-top: 230px;
+        align-items: center;
+    }
+
+    .productSelected {
+        max-width: 100px;
+        min-width: 100px;
+        margin-left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .input-class2 {
+        width: 50%;
+    }
+    .btns-containerUsers {
+        margin-top: -250px;
+    }
 }
