--- a/vite-project/src/componentes/Login.css
+++ b/vite-project/src/componentes/Login.css
@@ -4,7 +4,7 @@
     width: 140px;
 }
 
-body{
+body {
     margin: 0;
     padding: 0;
 }
@@ -17,7 +17,7 @@ body{
 }
 
 .background-chefs {
-    position: absolute;
+    position: fixed;
     height: 1200px;
 }
 
@@ -94,4 +94,10 @@ body{
     color: #776D6D;
     font-family: 'Staatliches', cursive;
     background-color: #D9D9D9;
+}
+
+@media screen and (min-width:1180px) {
+    .login {
+        height: 820px;
+    }
 }
