--- a/vite-project/src/componentes/Cards.css
+++ b/vite-project/src/componentes/Cards.css
@@ -6,12 +6,13 @@
     background-color: #242121;
     opacity: 90%;
     width: 180px;
-    min-height: 230px;
+    min-height: 280px;
     align-content: center;
     padding: 20px 16px;
     border-radius: 12px;
     color: #FFFF;
     font-family: 'Staatliches', cursive;
+    gap: 13px;
 }
 
 .productImg {
