Tarjetas pedidos estilizadas, cambio de status en proceso

--- a/vite-project/src/componentes/AdminProducts.css
+++ b/vite-project/src/componentes/AdminProducts.css
@@ -124,7 +124,7 @@
     display: flex;
     width: 85%;
     flex-wrap: wrap;
-    height: 80px;
+    height: auto;
     padding: 20px;
     gap: 10px;
     border-radius: 12px;
