--- a/vite-project/src/componentes/PedidosChef.css
+++ b/vite-project/src/componentes/PedidosChef.css
@@ -55,3 +55,21 @@
     height: 32px;
     color: #FFFFFF;
 }
+
+.orders-title {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 205px;
+        height: 50px;
+        background-color: #FA7F4B;
+        border: none;
+        border-radius: 35px;
+        font-size: 20px;
+        color: #FFF;
+        font-weight: 600;
+        margin-right: -40px;
+        z-index: 4;
+        text-decoration: none;
+        margin-top: 115px;
+}
