--- a/vite-project/src/componentes/PedidosChef.css
+++ b/vite-project/src/componentes/PedidosChef.css
@@ -6,7 +6,7 @@
     width: 250px;
     min-height: 350px;
     height: auto;
-    justify-content: center;
+    justify-content: space-around;
     align-content: center;
     padding: 20px 16px;
     border-radius: 12px;
